<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="es.urjc.alumnos.dhervas.androidtodoapp.addToDo.AddToDoDialogFragment"
    android:orientation="vertical"
    android:padding="5dp">
        <TextView
            android:id="@+id/add_todo_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_todo_title_text" />

        <EditText
            android:id="@+id/add_todo_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_todo_title_hint"
            android:autofillHints="title"
            android:inputType="text"/>

        <TextView
            android:id="@+id/add_todo_subtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/add_todo_subtitle_text"/>

        <EditText
            android:id="@+id/add_todo_subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_todo_subtitle_hint"
            android:autofillHints="title"
            android:inputType="text"/>

        <Button
            android:id="@+id/add_todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="5dp"
            android:text="@string/add_todo_button_text"/>
</LinearLayout>